JUnit for Course and FileStorage.