@@ -1,21 +1,28 @@
 package org.software.lms.service;
+
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
-import org.software.lms.model.*;
-import org.software.lms.repository.*;
-import org.software.lms.service.*;
-import org.software.lms.exception.*;
-import java.util.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.mockito.Mockito.*;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import org.mockito.MockitoAnnotations;
+import org.software.lms.exception.ResourceNotFoundException;
+import org.software.lms.model.Assignment;
+import org.software.lms.model.Course;
+import org.software.lms.model.Submission;
+import org.software.lms.model.User;
+import org.software.lms.repository.AssignmentRepository;
+import org.software.lms.repository.CourseRepository;
+import org.software.lms.repository.SubmissionRepository;
+import org.springframework.security.access.prepost.PreAuthorize;
 
-@ExtendWith(MockitoExtension.class)
+import java.time.LocalDateTime;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Optional;
+
+import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.*;
+
 class AssignmentServiceTest {
 
     @InjectMocks
@@ -25,228 +32,190 @@ class AssignmentServiceTest {
     private AssignmentRepository assignmentRepository;
 
     @Mock
+    private SubmissionRepository submissionRepository;
+
+    @Mock
     private CourseRepository courseRepository;
 
-    // @Mock
-    // private SubmissionRepository submissionRepository;
+    private Course course;
+    private Assignment assignment;
+    private Submission submission;
+
+    @BeforeEach
+    void setUp() {
+        MockitoAnnotations.openMocks(this);
+
+        // Create mock Course
+        course = new Course();
+        course.setId(1L);
+
+        // Create mock Assignment
+        assignment = new Assignment();
+        assignment.setId(1L);
+        assignment.setCourse(course);
+        assignment.setTitle("Test Assignment");
+        assignment.setDescription("Test Description");
+        assignment.setDueDate(LocalDateTime.now().plusDays(1));
+
+        // Create mock Submission
+        submission = new Submission();
+        submission.setId(1L);
+        submission.setAssignment(assignment);
+        submission.setStudentId(123L);
+        submission.setFilePath("filePath");
+    }
 
     @Test
     void testCreateAssignment() {
-        // Mock course repository
-        Long courseId = 1L;
-        Course mockCourse = new Course();
-        mockCourse.setId(courseId);
-        when(courseRepository.findById(courseId)).thenReturn(Optional.of(mockCourse));
-
-        // Mock assignment repository
-        Assignment assignment = new Assignment();
-        assignment.setTitle("Test Assignment");
+        // Mocking repository save
+        when(courseRepository.findById(1L)).thenReturn(Optional.of(course));
         when(assignmentRepository.save(any(Assignment.class))).thenReturn(assignment);
 
-        // Call the method
-        Assignment result = assignmentService.createAssignment(courseId, assignment);
+        // Calling the service method
+        Assignment createdAssignment = assignmentService.createAssignment(1L, assignment);
 
-        // Verify interactions and assertions
-        assertNotNull(result);
-        assertEquals("Test Assignment", result.getTitle());
-        verify(courseRepository, times(1)).findById(courseId);
+        // Verifying the results
+        assertNotNull(createdAssignment);
+        assertEquals("Test Assignment", createdAssignment.getTitle());
         verify(assignmentRepository, times(1)).save(any(Assignment.class));
     }
-        @Test
+
+    @Test
     void testGetAssignment() {
-        // Mock course and assignment
-        Long courseId = 1L;
-        Long assignmentId = 1L;
-        Course mockCourse = new Course();
-        mockCourse.setId(courseId);
-        Assignment mockAssignment = new Assignment();
-        mockAssignment.setId(assignmentId);
-        mockAssignment.setCourse(mockCourse);
-        when(courseRepository.findById(courseId)).thenReturn(Optional.of(mockCourse));
-        when(assignmentRepository.findByCourseIdAndId(courseId, assignmentId)).thenReturn(Optional.of(mockAssignment));
+        // Mocking repository findByCourseIdAndId
+        when(assignmentRepository.findByCourseIdAndId(1L, 1L)).thenReturn(Optional.of(assignment));
 
-        // Call the method
-        Assignment result = assignmentService.getAssignment(courseId, assignmentId);
+        // Calling the service method
+        Assignment foundAssignment = assignmentService.getAssignment(1L, 1L);
 
-        // Verify interactions and assertions
-        assertNotNull(result);
-        assertEquals(assignmentId, result.getId());
-        verify(courseRepository).findById(courseId);
-        verify(assignmentRepository).findByCourseIdAndId(courseId, assignmentId);
+        // Verifying the results
+        assertNotNull(foundAssignment);
+        assertEquals("Test Assignment", foundAssignment.getTitle());
     }
 
     @Test
-    void testGetAssignment_CourseNotFound() {
-        // Mock assignment
-        Long courseId = 1L;
-        Long assignmentId = 1L;
-        Assignment mockAssignment = new Assignment();
-        mockAssignment.setId(assignmentId);
-        when(assignmentRepository.findByCourseIdAndId(courseId, assignmentId)).thenReturn(Optional.of(mockAssignment));
+    void testGetAssignmentNotFound() {
+        // Mocking repository to return empty
+        when(assignmentRepository.findByCourseIdAndId(1L, 1L)).thenReturn(Optional.empty());
 
-        // Course not found
-        when(courseRepository.findById(courseId)).thenReturn(Optional.empty());
-
-        // Expect exception
-        assertThrows(ResourceNotFoundException.class, () -> assignmentService.getAssignment(courseId, assignmentId));
-        verify(assignmentRepository, never()).findByCourseIdAndId(courseId, assignmentId);
+        // Calling the service method and asserting exception
+        assertThrows(ResourceNotFoundException.class, () -> assignmentService.getAssignment(1L, 1L));
     }
 
-    @Test
-    void testGetAssignment_AssignmentNotFound() {
-        // Mock course
-        Long courseId = 1L;
-        Long assignmentId = 1L;
-        Course mockCourse = new Course();
-        mockCourse.setId(courseId);
-        when(courseRepository.findById(courseId)).thenReturn(Optional.of(mockCourse));
-
-        // Assignment not found
-        when(assignmentRepository.findByCourseIdAndId(courseId, assignmentId)).thenReturn(Optional.empty());
-
-        // Expect exception
-        assertThrows(ResourceNotFoundException.class, () -> assignmentService.getAssignment(courseId, assignmentId));
-    }
     @Test
     void testUpdateAssignment() {
-        // Mock course and assignment
-        Long courseId = 1L;
-        Long assignmentId = 1L;
-        Course mockCourse = new Course();
-        mockCourse.setId(courseId);
-        Assignment mockAssignment = new Assignment();
-        mockAssignment.setId(assignmentId);
-        mockAssignment.setCourse(mockCourse);
-        when(courseRepository.findById(courseId)).thenReturn(Optional.of(mockCourse));
-        when(assignmentRepository.findByCourseIdAndId(courseId, assignmentId)).thenReturn(Optional.of(mockAssignment));
+        // Mocking repository findByCourseIdAndId and save
+        when(assignmentRepository.findByCourseIdAndId(1L, 1L)).thenReturn(Optional.of(assignment));
+        when(assignmentRepository.save(any(Assignment.class))).thenReturn(assignment);
 
-        // Update details
-        Assignment updateDetails = new Assignment();
-        updateDetails.setTitle("Updated Title");
-        updateDetails.setDescription("Updated Description");
+        // Mock new assignment details
+        Assignment newDetails = new Assignment();
+        newDetails.setTitle("Updated Title");
+        newDetails.setDescription("Updated Description");
+        newDetails.setDueDate(LocalDateTime.now().plusDays(2));
 
-        // Call the method
-        Assignment updatedAssignment = assignmentService.updateAssignment(courseId, assignmentId, updateDetails);
+        // Calling the service method
+        Assignment updatedAssignment = assignmentService.updateAssignment(1L, 1L, newDetails);
 
-        // Verify interactions and assertions
+        // Verifying the results
         assertNotNull(updatedAssignment);
         assertEquals("Updated Title", updatedAssignment.getTitle());
-        assertEquals("Updated Description", updatedAssignment.getDescription());
-        verify(assignmentRepository).findByCourseIdAndId(courseId, assignmentId);
-        verify(assignmentRepository).save(updatedAssignment);
-    }
-
-    @Test
-    void testUpdateAssignment_CourseNotFound() {
-        // Mock assignment
-        Long courseId = 1L;
-        Long assignmentId = 1L;
-        Assignment mockAssignment = new Assignment();
-        mockAssignment.setId(assignmentId);
-        when(assignmentRepository.findByCourseIdAndId(courseId, assignmentId)).thenReturn(Optional.of(mockAssignment));
-
-        // Course not found
-        when(courseRepository.findById(courseId)).thenReturn(Optional.empty());
-
-        // Expect exception
-        assertThrows(ResourceNotFoundException.class, () -> assignmentService.updateAssignment(courseId, assignmentId, new Assignment()));
-        verify(assignmentRepository, never()).save(any());
-    }
-
-    @Test
-    void testUpdateAssignment_AssignmentNotFound() {
-        // Mock course
-        Long courseId = 1L;
-        Long assignmentId = 1L;
-        Course mockCourse = new Course();
-        mockCourse.setId(courseId);
-        when(courseRepository.findById(courseId)).thenReturn(Optional.of(mockCourse));
-
-        // Assignment not found
-        when(assignmentRepository.findByCourseIdAndId(courseId, assignmentId)).thenReturn(Optional.empty());
-
-        // Expect exception
-        assertThrows(ResourceNotFoundException.class, () -> assignmentService.updateAssignment(courseId, assignmentId, new Assignment()));
-        verify(assignmentRepository, never()).save(any());
     }
 
     @Test
     void testDeleteAssignment() {
-        // Mock course and assignment
-        Long courseId = 1L;
-        Long assignmentId = 1L;
-        Course mockCourse = new Course();
-        mockCourse.setId(courseId);
-        Assignment mockAssignment = new Assignment();
-        mockAssignment.setId(assignmentId);
-        mockAssignment.setCourse(mockCourse);
-        when(courseRepository.findById(courseId)).thenReturn(Optional.of(mockCourse));
-        when(assignmentRepository.findByCourseIdAndId(courseId, assignmentId)).thenReturn(Optional.of(mockAssignment));
+        // Mocking repository findByCourseIdAndId and delete
+        when(assignmentRepository.findByCourseIdAndId(1L, 1L)).thenReturn(Optional.of(assignment));
 
-        // Call the method
-        assignmentService.deleteAssignment(courseId, assignmentId);
+        // Calling the service method
+        assignmentService.deleteAssignment(1L, 1L);
 
-        // Verify interactions
-        verify(assignmentRepository).findByCourseIdAndId(courseId, assignmentId);
-        verify(assignmentRepository).delete(mockAssignment);
+        // Verifying the repository delete method was called
+        verify(assignmentRepository, times(1)).delete(assignment);
     }
 
     @Test
-    void testDeleteAssignment_CourseNotFound() {
-        // Mock assignment
-        Long courseId = 1L;
-        Long assignmentId = 1L;
-        Assignment mockAssignment = new Assignment();
-        mockAssignment.setId(assignmentId);
-        when(assignmentRepository.findByCourseIdAndId(courseId, assignmentId)).thenReturn(Optional.of(mockAssignment));
+    void testGradeSubmission() {
 
-        // Course not found
-        when(courseRepository.findById(courseId)).thenReturn(Optional.empty());
+        when(submissionRepository.findById(1L)).thenReturn(Optional.of(submission));
+        when(submissionRepository.save(any(Submission.class))).thenReturn(submission);
 
-        // Expect exception
-        assertThrows(ResourceNotFoundException.class, () -> assignmentService.deleteAssignment(courseId, assignmentId));
-        verify(assignmentRepository, never()).delete(any());
+        Submission result = assignmentService.gradeSubmission(1L, 1L, 85.0, "Well Done!");
+
+        assertNotNull(result);
+        verify(submissionRepository, times(1)).save(any(Submission.class));
     }
 
     @Test
-    void testDeleteAssignment_AssignmentNotFound() {
-        // Mock course
-        Long courseId = 1L;
-        Long assignmentId = 1L;
-        Course mockCourse = new Course();
-        mockCourse.setId(courseId);
-        when(courseRepository.findById(courseId)).thenReturn(Optional.of(mockCourse));
+    void testGradeSubmissionNotFound() {
+        // Mocking repository to return empty
+        when(submissionRepository.findById(1L)).thenReturn(Optional.empty());
 
-        // Assignment not found
-        when(assignmentRepository.findByCourseIdAndId(courseId, assignmentId)).thenReturn(Optional.empty());
-
-        // Expect exception
-        assertThrows(ResourceNotFoundException.class, () -> assignmentService.deleteAssignment(courseId, assignmentId));
-        verify(assignmentRepository, never()).delete(any());
+        // Calling the service method and asserting exception
+        assertThrows(ResourceNotFoundException.class, () -> assignmentService.gradeSubmission(1L, 1L, 95.0, "Great work!"));
     }
 
     @Test
-    void testGetAssignmentsByCourse() {
-        // Mock course
-        Long courseId = 1L;
-        Course mockCourse = new Course();
-        mockCourse.setId(courseId);
-        when(courseRepository.findById(courseId)).thenReturn(Optional.of(mockCourse));
+    void testSubmitAssignment() {
+        String filePath = "path/to/file";
 
-        // Mock assignments
-        List<Assignment> mockAssignments = List.of(
-                new Assignment(),
-                new Assignment()
-        );
-        when(assignmentRepository.findByCourseId(courseId)).thenReturn(mockAssignments);
+        Course course = new Course();
+        User student = new User();
+        student.setId(123L);
+        course.setStudentEnrolledCourses(Arrays.asList(student));
 
-        // Call the method
-        List<Assignment> assignments = assignmentService.getAssignmentsByCourse(courseId);
+        Assignment assignment = new Assignment();
+        assignment.setCourse(course);
+        assignment.setDueDate(LocalDateTime.now().plusDays(1));
 
-        // Verify interactions and assertions
-        assertEquals(2, assignments.size());
-        verify(courseRepository).findById(courseId);
-        verify(assignmentRepository).findByCourseId(courseId);
+        when(assignmentRepository.findByCourseIdAndId(1L, 1L))
+                .thenReturn(Optional.of(assignment));
+        when(submissionRepository.existsByAssignmentIdAndStudentId(1L, 123L))
+                .thenReturn(false);
+        when(submissionRepository.save(any(Submission.class)))
+                .thenReturn(new Submission());
+
+        Submission result = assignmentService.submitAssignment(1L, 1L, 123L, filePath);
+
+        assertNotNull(result);
+        verify(submissionRepository, times(1)).save(any(Submission.class));
     }
 
+    @Test
+    void testGetSubmissionsByAssignment() {
+        Long courseId = 1L;
+        Long assignmentId = 1L;
+        List<Submission> submissions = Arrays.asList(new Submission(), new Submission());
+
+        // Mocking repository findByAssignmentId
+        when(submissionRepository.findByAssignmentId(1L)).thenReturn(List.of(submission));
+
+        Assignment assignment = new Assignment();
+        when(assignmentRepository.findByCourseIdAndId(courseId, assignmentId)).thenReturn(Optional.of(assignment));
+        when(submissionRepository.findByAssignmentId(assignmentId)).thenReturn(submissions);
+
+        // Calling the service method
+        List<Submission> result = assignmentService.getSubmissionsByAssignment(1L, 1L);
+
+        // Verifying the results
+        assertNotNull(result);
+        assertEquals(1, result.size());
+    }
+
+    @Test
+    void testGetStudentSubmissions() {
+        Long courseId = 1L;
+
+        // Mocking repository findByAssignmentCourseIdAndStudentId
+        when(submissionRepository.findByAssignmentCourseIdAndStudentId(1L, 123L)).thenReturn(List.of(submission));
+
+        when(courseRepository.existsById(courseId)).thenReturn(true);
+
+        // Calling the service method
+        List<Submission> submissions = assignmentService.getStudentSubmissions(1L, 123L);
+
+        // Verifying the results
+        assertNotNull(submissions);
+        assertEquals(1, submissions.size());
+    }
 }
